--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -41,16 +41,18 @@ div[class$="header"]{
         justify-content: center;    
         font-size: 1.25rem;    
         text-decoration: underline;    
-        color: rgb(51, 0, 102);        
-}                                  
+        color: rgb(0, 0, 0);        
+}                          
 
 
 .top-content-wrapper{
+    margin-top: 5px;
     display: flex;
-    width: 100%;
+    width: 80%;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    background-color: rgb(255, 186, 82);
+    background-color: rgb(255, 255, 255);
+    border: 5px solid rgb(255, 153, 102);
     }
     
     .top-content-wrapper div[class|="container"]{
@@ -62,6 +64,7 @@ div[class$="header"]{
         flex-wrap: wrap;
         justify-content: center;
         max-height: 100%;
+        border: 5px solid rgb(255, 153, 102);
         }
         
         .critical-dog-wrapper{
@@ -98,8 +101,8 @@ div[class$="header"]{
                     margin-bottom: 5px;
                     text-align: center;
                     background-color: rgba(0, 0, 0, 0.5);
-                    border: 1px solid rgb(51, 0, 102);
-                    color: rgb(255, 186, 82);
+                    border: 1px solid rgb(255, 153, 102);
+                    color: rgb(255, 153, 102);
 }                
 
 
@@ -125,12 +128,10 @@ div[class$="header"]{
     .donations-bank-details{
         width: 80%;
         align-self: center;
-        border: 1px solid rgb(51, 0, 102);
         border-radius: 10px;
         padding: 5px;
         margin-top: 10px;
-        color: rgb(51, 0, 102);
-        background-color: rgb(255, 186, 82);
+        background-color: rgb(255, 153, 102);
         }
 
         .donations-bank-details table{
