--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -53,6 +53,7 @@ div[class$="header"]{
     flex-wrap: wrap;
     background-color: rgb(255, 255, 255);
     border: 5px solid rgb(255, 153, 102);
+    border-radius: 5px;
     }
     
     .top-content-wrapper div[class|="container"]{
@@ -64,7 +65,6 @@ div[class$="header"]{
         flex-wrap: wrap;
         justify-content: center;
         max-height: 100%;
-        border: 5px solid rgb(255, 153, 102);
         }
         
         .critical-dog-wrapper{
