--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -11,92 +11,381 @@
 *{
     margin: 0;
     box-sizing: border-box;    
-}        
+}   
 
-header{
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    flex-wrap: wrap;
-    position: fixed;
-    background-color: rgb(255, 153, 102);
-    box-shadow: 0 2px rgb(255, 255, 255);
-    top: 0;
-    width: 100%;
-    font-family: 'Ubuntu', sans-serif;
-    }
+
+@media screen and (width <= 500px) {
     
-    a{
-    text-decoration: none;
-}    
-
-
-.orgname-and-logo-wrapper{
-    display: flex;
-    justify-content: space-evenly;
-    }   
-    
-    .logo-holder .logo{
+    header{
+        z-index: 10;
         display: flex;
-        width: 90px;
         height: 90px;
+        overflow: visible;
+        justify-content: space-between;
+        align-content: center;
+        flex-wrap: wrap;
+        position: fixed;
+        background-color: rgb(255, 153, 102);
+        box-shadow: 0 2px rgb(255, 255, 255);
+        top: 0;
+        width: 100%;
+        font-family: 'Ubuntu', sans-serif;
         }
+        
+        a{
+        text-decoration: none;
+    }    
     
-        .logo-holder .logo img{
-            height: 90px;
-            width: 90px;
-            }
     
-    .orgname-and-logo-wrapper .orgname{
-        margin-left: 5px;
-        display: flex;
-        }
-    
-        .orgname .org{
-            align-self: center;
-            color: rgb(255, 255, 255);
-            font-weight: bold;
-            font-size: 2rem;
-            opacity: 1;
-}            
-
-
-.navbar{
-    display: inline-flex;
-    flex-wrap: wrap;
-    }
-    
-    .navbar ul{
+    .orgname-and-logo-wrapper{
         display: flex;
         justify-content: space-evenly;
-        }
-    
-        .navbar ul li{
-            display: inline-block;
-            align-self: center;
-            font-size: 1.05rem;
+        }   
+        
+        .logo-holder .logo{
+            display: flex;
+            width: 90px;
+            height: 90px;
             }
         
-            .navbar ul li a{
+            .logo-holder .logo img{
+                height: 90px;
+                width: 90px;
+                }
+        
+        .orgname-and-logo-wrapper .orgname{
+            margin-left: 5px;
+            display: flex;
+            }
+        
+            .orgname .org{
+                align-self: center;
+                color: rgb(255, 255, 255);
+                font-weight: bold;
+                font-size: 1.2rem;
+                opacity: 1;
+    } 
+    
+    .hamburger-menu-wrapper{
+        height: 45px;
+        width: 45px;
+        margin: 5px;
+        align-self: center;
+    }
+
+    .hamburger{
+        padding: 4px;
+        border: none;
+        background: rgb(255, 153, 102);
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
+    }
+
+    .closeIcon{
+        display: none;
+    }
+
+    .menuIcon{
+        display: inline-flex;
+    }
+    
+    .menuIcon, .closeIcon{
+        width: 100%;
+        height: 100%;
+        place-content: center;
+    }
+
+    .menu-mobile{
+        transform: translateX(+300vw);
+        transition: transform 0.2s;
+        z-index: 98;
+        background: rgb(255, 153, 102);
+        color: rgb(255, 255, 255);
+        list-style: none;
+        display: inline-flex;
+        gap: 10px;
+        height: 40px;
+        position: fixed;
+        top: 95px;
+        left: -45px;
+        right: 0;
+        bottom: 0;
+        justify-content: flex-end;
+        }
+
+        .menuItem{
+            display: inline-block;
+            align-self: center;
+            z-index: 99;
+            }
+
+            .menuItem a{
                 display: inline-block;
-                color: rgb(255, 255, 255);  
-                flex-shrink: 1;
+                width: 100%;
+                height: 100%;
+                padding: 10px;
+                color: rgb(255, 255, 255);
                 }
-                
-                .navbar ul li a:hover{
+
+                .menuItem a:hover{
                     text-decoration: underline;
-                    font-weight: bold;
-                    border: 2px solid rgb(255, 255, 255);
                 }
-                
-                .navbar ul li a:active{
-                    text-decoration: none;
+
+                .menuIcon a:active{
                     background-color: rgb(255, 255, 255);
                     color: rgb(255, 153, 102);
+                }    
+
+    
+    .showMenu{
+        transform: translateX(0);
+    }
+
+    .menu-non-mobile{
+        display: none;
+    }
+
+    .material-icons{
+        color: rgb(255, 255, 255);
+    }
+
+}
+
+@media screen and (500px < width < 1000px) {
+
+    header{
+        z-index: 10;
+        display: flex;
+        height: 90px;
+        overflow: visible;
+        justify-content: space-between;
+        align-content: center;
+        flex-wrap: wrap;
+        position: fixed;
+        background-color: rgb(255, 153, 102);
+        box-shadow: 0 2px rgb(255, 255, 255);
+        top: 0;
+        width: 100%;
+        font-family: 'Ubuntu', sans-serif;
+        }
+        
+        a{
+        text-decoration: none;
+    }    
+    
+    
+    .orgname-and-logo-wrapper{
+        display: flex;
+        justify-content: space-evenly;
+        }   
+        
+        .logo-holder .logo{
+            display: flex;
+            width: 90px;
+            height: 90px;
+            }
+        
+            .logo-holder .logo img{
+                height: 90px;
+                width: 90px;
                 }
-                
-                .navlink-wrapper{
-                    padding: 30px 2vw;
-                    margin: 5px;
-                    border-radius: 5px;
-}                
+        
+        .orgname-and-logo-wrapper .orgname{
+            margin-left: 5px;
+            display: flex;
+            }
+        
+            .orgname .org{
+                align-self: center;
+                color: rgb(255, 255, 255);
+                font-weight: bold;
+                font-size: 2rem;
+                opacity: 1;
+    } 
+    
+    .hamburger-menu-wrapper{
+        height: 45px;
+        width: 45px;
+        margin: 5px;
+        align-self: center;
+    }
+
+    .hamburger{
+        padding: 4px;
+        border: none;
+        background: rgb(255, 153, 102);
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
+    }
+
+    .closeIcon{
+        display: none;
+    }
+
+    .menuIcon{
+        display: inline-flex;
+    }
+    
+    .menuIcon, .closeIcon{
+        width: 100%;
+        height: 100%;
+        place-content: center;
+    }
+
+    .menu-mobile{
+        transform: translateX(+300vw);
+        transition: transform 0.2s;
+        z-index: 98;
+        background: rgb(255, 153, 102);
+        color: rgb(255, 255, 255);
+        list-style: none;
+        display: inline-flex;
+        gap: 20px;
+        height: 40px;
+        position: fixed;
+        top: 95px;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        justify-content: center;
+        }
+
+        .menuItem{
+            display: inline-block;
+            align-self: center;
+            z-index: 99;
+            }
+
+            .menuItem a{
+                display: inline-block;
+                width: 100%;
+                height: 100%;
+                padding: 10px;
+                color: rgb(255, 255, 255);
+                }
+
+                .menuItem a:hover{
+                    text-decoration: underline;
+                }
+
+                .menuIcon a:active{
+                    background-color: rgb(255, 255, 255);
+                    color: rgb(255, 153, 102);
+                }    
+
+    
+    .showMenu{
+        transform: translateX(0);
+    }
+
+    .menu-non-mobile{
+        display: none;
+    }
+
+    .material-icons{
+        color: rgb(255, 255, 255);
+    }
+    
+}
+
+@media screen and (width >= 1000px) {
+    
+    header{
+        z-index: 10;
+        display: flex;
+        justify-content: space-between;
+        align-content: center;
+        flex-wrap: wrap;
+        position: fixed;
+        background-color: rgb(255, 153, 102);
+        box-shadow: 0 2px rgb(255, 255, 255);
+        top: 0;
+        width: 100%;
+        font-family: 'Ubuntu', sans-serif;
+        }
+        
+        a{
+        text-decoration: none;
+    }    
+    
+    
+    .hamburger-menu-wrapper{
+        display: none;
+    }
+
+
+    .orgname-and-logo-wrapper{
+        display: flex;
+        justify-content: space-evenly;
+        }   
+        
+        .logo-holder .logo{
+            display: flex;
+            width: 90px;
+            height: 90px;
+            }
+        
+            .logo-holder .logo img{
+                height: 90px;
+                width: 90px;
+                }
+        
+        .orgname-and-logo-wrapper .orgname{
+            margin-left: 5px;
+            display: flex;
+            }
+        
+            .orgname .org{
+                align-self: center;
+                color: rgb(255, 255, 255);
+                font-weight: bold;
+                font-size: 2rem;
+                opacity: 1;
+    }    
+
+
+    .menu-non-mobile{
+        display: inline-flex;
+        flex-wrap: wrap;
+        height: 90px;
+        overflow: hidden;
+        }
+        
+        .menu-non-mobile ul{
+            display: flex;
+            justify-content: space-evenly;
+            }
+        
+            .menu-non-mobile ul li{
+                display: inline-block;
+                align-self: center;
+                font-size: 1.05rem;
+                }
+            
+                .menu-non-mobile ul li a{
+                    display: inline-block;
+                    color: rgb(255, 255, 255);  
+                    flex-shrink: 1;
+                    }
+                    
+                    .menu-non-mobile ul li a:hover{
+                        text-decoration: underline;
+                        font-weight: bold;
+                        border: 2px solid rgb(255, 255, 255);
+                    }
+                    
+                    .menu-non-mobile ul li a:active{
+                        text-decoration: none;
+                        background-color: rgb(255, 255, 255);
+                        color: rgb(255, 153, 102);
+                    }
+                    
+                    .navlink-wrapper{
+                        padding: 30px 2vw;
+                        margin: 5px;
+                        border-radius: 5px;
+    }                
+
+}        
