--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -13,7 +13,6 @@ footer{
     margin-top: 3px;
     position: relative;
     background-color: rgb(255, 153, 102);
-    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,7 +46,7 @@ footer{
 
 .extra-contacts{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     }
     
