--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -14,7 +14,7 @@
 }   
 
 
-@media screen and (width <= 500px) {
+@media all and (width <= 500px) {
     
     header{
         z-index: 10;
@@ -152,7 +152,7 @@
 
 }
 
-@media screen and (500px < width < 1000px) {
+@media all and (500px < width < 1000px) {
 
     header{
         z-index: 10;
@@ -290,7 +290,7 @@
     
 }
 
-@media screen and (width >= 1000px) {
+@media all and (width >= 1000px) {
     
     header{
         z-index: 10;
