--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -8,59 +8,145 @@
          url('../fonts/Ubuntu_Mono/ubuntu-mono-v15-latin-regular.woff2') format('woff2');
 }
 
-footer{
-    font-family: 'Ubuntu Mono', monospace;
-    margin-top: 3px;
-    position: relative;
-    background-color: rgb(255, 153, 102);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}    
+@media screen and (max-width: 800px) {
 
-
-.footer-nav{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    }
-    
-    .footer-nav ul li{
-        display: inline;
-        list-style-type: none;
-        font-size: 1rem;
+    footer{
+        font-family: 'Ubuntu Mono', monospace;
+        margin-top: 3px;
+        position: relative;
+        background-color: rgb(255, 153, 102);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
         }
         
-        .footer-nav ul li a{
-            text-decoration: underline dotted;
-            padding: 0 10px;
-            display: inline-block;
+        footer ul{
+            margin-left: 0;
+            padding-left: 0;
+        }
+    
+    .footer-nav{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        }
+        
+        .footer-nav ul li{
+            display: inline;
+            list-style-type: none;
+            font-size: 1rem;
+            }
+            
+            .footer-nav ul li a{
+                text-decoration: underline dotted;
+                padding: 0 10px;
+                display: inline-block;
+                color: rgb(0, 0, 0);
+                }
+    
+            .footer-nav ul li a:hover{
+                text-decoration: underline;
+    }
+    
+    .extra-contacts-large{
+        display: none;
+    }
+
+    .extra-contacts-smaller{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        }
+
+        .extra-contacts-smaller ul{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+        }
+
+        .extra-contacts-smaller ul li{
+            display: inline;
+            list-style-type: none;
+            font-size: 0.9rem;
+            margin: 0;
             color: rgb(0, 0, 0);
             }
+            
+            .extra-contacts-smaller ul li+li::before{
+                content: "|";
+                color: rgb(0, 0, 0);
+                margin: 0 1vw;
+    }
 
-        .footer-nav ul li a:hover{
-            text-decoration: underline;
-}  
+}
 
+@media screen and (min-width: 801px) {
 
-.extra-contacts{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    footer{
+        font-family: 'Ubuntu Mono', monospace;
+        margin-top: 3px;
+        position: relative;
+        background-color: rgb(255, 153, 102);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }    
+
+    footer ul{
+        margin-left: 0;
+        padding-left: 0;
     }
     
-    .extra-contacts ul li{
-        display: inline;
-        list-style-type: none;
-        font-size: 0.9rem;
-        margin: 0;
-        color: rgb(0, 0, 0);
+    .footer-nav{
+        display: flex;
+        justify-content: center;
+        align-items: center;
         }
         
-        .extra-contacts ul li+li::before{
-            content: "|";
+        .footer-nav ul li{
+            display: inline;
+            list-style-type: none;
+            font-size: 1rem;
+            }
+            
+            .footer-nav ul li a{
+                text-decoration: underline dotted;
+                padding: 0 10px;
+                display: inline-block;
+                color: rgb(0, 0, 0);
+                }
+    
+            .footer-nav ul li a:hover{
+                text-decoration: underline;
+    }
+    
+    .extra-contacts-smaller{
+        display: none;
+    }
+    
+    
+    .extra-contacts-large{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        }
+        
+        .extra-contacts-large ul li{
+            display: inline;
+            list-style-type: none;
+            font-size: 0.9rem;
+            margin: 0;
             color: rgb(0, 0, 0);
-            margin: 0 1vw;
-}        
+            }
+            
+            .extra-contacts-large ul li+li::before{
+                content: "|";
+                color: rgb(0, 0, 0);
+                margin: 0 1vw;
+    }
 
+}
