--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -108,10 +108,12 @@
         height: 40px;
         position: fixed;
         top: 95px;
-        left: -45px;
+        left: 0;
         right: 0;
         bottom: 0;
-        justify-content: flex-end;
+        justify-content: center;
+        margin-left: 0;
+        padding-left: 0;
         }
 
         .menuItem{
@@ -250,6 +252,8 @@
         right: 0;
         bottom: 0;
         justify-content: center;
+        margin-left: 0;
+        padding-left: 0;
         }
 
         .menuItem{
