--- a/resources/css/hunde.css
+++ b/resources/css/hunde.css
@@ -20,7 +20,7 @@ main{
 .container-searchbar{
     margin-left: 5%;
     margin-top: 5px;
-    width: 50%;
+    width: 100%;
     height: 30px;
     }
     
@@ -30,20 +30,20 @@ main{
     }
     
     input[type=text]{
-        width: 50%;
+        width: 25%;
         height: 75%;
         border: 1px solid rgb(255, 153, 102);
         transition: all 0.5s ease-in-out;
         }
 
         input[type=text]:hover{
-            width: 75%;
+            width: 45%;
             height: 80%;
             border: 2px solid rgb(255, 153, 102);
             }
         
         input[type=text]:focus{
-            width: 75%;
+            width: 45%;
             height: 100%;
             border: 2px solid rgb(255, 153, 102);
             outline: none;
@@ -60,6 +60,11 @@ main{
     flex-wrap: wrap;
     justify-content: space-evenly;
     gap: 10px;
+    }
+
+    .container-dogs ul{
+        margin-left: 0;
+        padding-left: 0;
     }
     
     .container-dogs ul .dogs{
