--- a/resources/css/dog_sites.css
+++ b/resources/css/dog_sites.css
@@ -19,9 +19,13 @@ main{
     width: 100%;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
 
     #large-screen-show{
+        display: none;
+    }
+
+    #medium-screen-show{
         display: none;
     }
 
@@ -64,7 +68,7 @@ main{
             }
             
             .image-holder img{
-                width: 350px;
+                width: 310px;
                 height: 200px;
                 border-radius: 5px;
         }
@@ -72,7 +76,7 @@ main{
         .info-text{
             width: 100%;
             padding: 10px;
-            font-size: 0.9rem;
+            font-size: 1rem;
         }
 
         .info-table{
@@ -187,6 +191,25 @@ main{
                         width: 100%;
                         height: auto;
             }
+
+            .media-section ul .video{
+                display: flex;
+                justify-content: center;
+                align-content: center;
+                align-self: center;
+                width: 150px;
+                height: 100px;
+                border: 1px solid rgb(255, 153, 102);
+                }
+
+                .media-section ul .video video{
+                    width: 100%;
+                    height: auto;
+                    }
+
+                    .media-section ul .video video:hover{
+                        cursor: pointer;
+                    }
             
             .media-section h2{
                 width: 100%;
@@ -199,29 +222,31 @@ main{
     
 }
 
-@media screen and (min-width: 501px) and (max-width: 750px) {
+@media screen and (min-width: 601px) and (max-width: 1024px) {
 
     #large-screen-show{
         display: none;
     }
 
     #small-screen-show{
-        width: 100%;
+        display: none;
+    }
+
+    #medium-screen-show{
         display: flex;
+        width: 100%;
         justify-content: center;
         align-content: center;
         margin-top: 95px;
-        flex-wrap: wrap;
-        gap: 20px;
-        }
+        flex-flow: column;
+    }
 
-
-    .top-container, .bottom-container{    
-        width: auto;
+    .medium-top-container{
         display: flex;
         flex-wrap: wrap;
-        flex-direction: column;
-        gap: 10px;
+        width: 95%;
+        gap: 5px;
+        align-self: center;
         justify-content: center;
         }
 
@@ -230,39 +255,33 @@ main{
             }
 
             .name-container h1{
-                width: 100%;
                 text-align: center;
+                width: 100%;
                 color: rgb(255, 153, 102);
                 border-bottom: 1px solid rgb(255, 153, 102);
+                margin-bottom: 5px;
         }
-
+        
         .image-holder{
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-content: center;
+            width: 420px;
+            height: 236px;
+
             }
-            
             .image-holder img{
-                width: 350px;
-                height: 200px;
-                border-radius: 5px;
+                width: 100%;
+                height: 100%;
         }
-
-        .info-text{
-            width: 100%;
-            padding: 10px;
-            font-size: 0.9rem;
-        }
-
+        
         .info-table{
-            width: 100%;
+            max-width: 100%;
+            min-width: 45%;
             display: flex;
-            flex-wrap: wrap;
+            flex: 1 1;
+            align-self: center;
             }
 
             table, th, td{
-                border: 1px solid rgb(255, 153, 102);
+                border: 2px solid rgb(255, 153, 102);
                 border-collapse: collapse;
                 }
 
@@ -278,7 +297,7 @@ main{
                 
                 th{
                     text-align: center;
-                    font-size: 1rem;
+                    font-size: 1.5rem;
                 }
 
                 td{
@@ -287,35 +306,37 @@ main{
 
                     td:nth-child(odd){
                         font-weight: bold;
+    }
+    
+    .medium-bottom-container{
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-content: center;
+        flex-direction: column;
         }
-        
-        .table-info{
-            width: 100%;
-            }
 
-            .table-info h4{
-                width: 100%;
-                text-align: center;
-                margin-top: 15px;
-                border-top: 1px solid rgb(255, 153, 102);
-            }
-
-            .table-info p{
-                padding: 10px;
-                font-size: 0.9rem;
-            }
-        
-        .media-section{
+        .info-text{
             display: flex;
             flex-direction: column;
-            flex-wrap: wrap;
-            width: 98%;
-            margin: 0 1%;
-            padding: 3px;
             justify-content: center;
             align-content: center;
-            border: 1px solid rgb(255, 153, 102);
-            border-radius: 5px;
+            padding: 5px;
+            width: 95%;
+            align-self: center;
+            margin: 10px 0;
+            border-top: 1px solid rgb(255, 153, 102);
+            border-bottom: 1px solid rgb(255, 153, 102);
+        }
+        
+        .media-section{
+            display: flex; 
+            flex-wrap: wrap;
+            width: 95%;
+            border: 2px solid rgb(255, 153, 102);
+            border-radius: 10px;
+            padding: 3px;
+            align-self: center;
             }
 
             #fullpage {
@@ -339,6 +360,7 @@ main{
                 display: flex;
                 flex-wrap: wrap;
                 flex-direction: row;
+                gap: 5px;
                 }
 
                 .media-section ul .hochkant{
@@ -352,7 +374,11 @@ main{
                     .media-section ul .hochkant img{
                         height: 100%;
                         width: auto;
-                }
+                        }
+
+                        .media-section ul .hochkant img:hover{
+                            cursor: pointer;
+                        }
 
                 .media-section ul .quer{
                     width: 150px;
@@ -366,20 +392,289 @@ main{
                     .media-section ul .quer img{
                         width: 100%;
                         height: auto;
-            }
-            
-            .media-section h2{
-                width: 100%;
-                text-align: center;
-                color: rgb(255, 153, 102);
-                border-bottom: 1px solid rgb(255, 153, 102);
-            }
+                        }
 
+                        .media-section ul .quer img:hover{
+                            cursor: pointer;
+                }        
+                
+                .media-section ul .video{
+                    display: flex;
+                    justify-content: center;
+                    align-content: center;
+                    align-self: center;
+                    width: 150px;
+                    height: 100px;
+                    border: 1px solid rgb(255, 153, 102);
+                    }
+
+                    .media-section ul .video video{
+                        width: 100%;
+                        height: auto;
+                        }
+
+                        .media-section ul .video video:hover{
+                            cursor: pointer;
+                        }
+            
+                .media-section h2{
+                    width: 100%;
+                    text-align: center;
+                    color: rgb(255, 153, 102);
+                    border-bottom: 1px solid rgb(255, 153, 102);
+    }
+    
+    .table-info{
+        width: 95%;
+        display: flex;
+        flex-wrap: wrap;
+        align-self: center;
+        border-top: 1px solid rgb(255, 153, 102);
+        margin-top: 20px;
+        }
+        
+        .table-info h4{
+            text-align: center;
+            width: 100%;
+        }
+        
+        .table-info p{
+            padding: 5px;
+        }
+
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1499px) {
+
+    #small-screen-show{
+        display: none;
+    }
+
+    #medium-screen-show{
+        display: none;
+    }
+
+    #large-screen-show{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        margin-top: 95px;
+        gap: 15px;
+        }
+    
+        .left-container{
+            width: 500px;
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            gap: 10px;
+            margin-left: 5px;
+            }
+    
+            .name-container{
+                display: flex;
+                width: 100%;
+                }
+    
+                .name-container h1{
+                    text-align: center;
+                    width: 100%;
+                    color: rgb(255, 153, 102);
+                    border-bottom: 1px solid rgb(255, 153, 102);
+                    margin-bottom: 5px;
+                }
+    
+            .image-holder{
+                width: 100%;
+                height: 281px;
+                }
+    
+                .image-holder img{
+                    width: 500px;
+                    height: 281px;
+                    border-radius: 5px;
+                }
+    
+            .info-table{
+                width: 100%;
+                display: flex;
+                flex-wrap: wrap;
+                margin-top: 40px;
+                }
+    
+                table, th, td{
+                    border: 2px solid rgb(255, 153, 102);
+                    border-collapse: collapse;
+                    }
+    
+                table{
+                    width: 100%;
+                    height: 200px;
+                    background-color: rgb(230, 230, 230);
+                    }
+                    
+                    td, th{
+                        color: rgb(0, 0, 0);
+                    }
+                    
+                    th{
+                        text-align: center;
+                        font-size: 1.5rem;
+                    }
+    
+                    td{
+                        padding: 3px;
+                        }
+    
+                        td:nth-child(odd){
+                            font-weight: bold;
+                }
+                
+                .table-info{
+                    width: 100%;
+                    display: flex;
+                    flex-wrap: wrap;
+                    align-self: flex-end;
+                    border-top: 1px solid rgb(255, 153, 102);
+                    margin-top: 20px;
+                    }
+                    
+                    .table-info h4{
+                        text-align: center;
+                        width: 100%;
+                    }
+                    
+                    .table-info p{
+                        padding: 5px;
+                    }
+    
+        .right-container{
+            max-width: 1000px;
+            min-width: 500px;
+            flex: 1 1;
+            display: flex;
+            flex-wrap: wrap;
+            margin-right: 5px;
+            }
+    
+            .info-text{
+                display: flex;
+                flex-wrap: wrap;
+                flex-direction: column;
+                width: 100%;
+                margin-top: 20px;
+                padding: 5px;
+                }
+
+                .info-text p{
+                    padding: 0 10px;
+                    width: 100%;
+                }
+    
+            .media-section{
+                display: flex; 
+                flex-wrap: wrap;
+                width: 100%;
+                border: 2px solid rgb(255, 153, 102);
+                border-radius: 10px;
+                padding: 3px;
+                }
+
+                #fullpage {
+                    display: none;
+                    position: absolute;
+                    z-index: 9999;
+                    top: 0;
+                    left: 0;
+                    width: 100vw;
+                    height: 100vh;
+                    background-size: contain;
+                    background-repeat: no-repeat no-repeat;
+                    background-position: center center;
+                    background-color: rgb(30, 30, 30);
+                }
+
+                .media-section ul{
+                    list-style: none;
+                    margin-left: 0;
+                    padding-left: 0;
+                    display: flex;
+                    flex-wrap: wrap;
+                    flex-direction: row;
+                    gap: 5px;
+                    }
+
+                    .media-section ul .hochkant{
+                        display: flex;
+                        width: 100px;
+                        height: 150px;
+                        justify-content: center;
+                        align-items: center;
+                        }
+
+                        .media-section ul .hochkant img{
+                            height: 100%;
+                            width: auto;
+                            }
+
+                            .media-section ul .hochkant img:hover{
+                                cursor: pointer;
+                            }
+
+                    .media-section ul .quer{
+                        width: 150px;
+                        height: 100px;
+                        display: flex;
+                        justify-content: center;
+                        align-content: center;
+                        align-self: center;
+                        }
+
+                        .media-section ul .quer img{
+                            width: 100%;
+                            height: auto;
+                            }
+
+                            .media-section ul .quer img:hover{
+                                cursor: pointer;
+                    }        
+                    
+                    .media-section ul .video{
+                        display: flex;
+                        justify-content: center;
+                        align-content: center;
+                        align-self: center;
+                        width: 150px;
+                        height: 100px;
+                        border: 1px solid rgb(255, 153, 102);
+                        }
+
+                        .media-section ul .video video{
+                            width: 100%;
+                            height: auto;
+                            }
+
+                            .media-section ul .video video:hover{
+                                cursor: pointer;
+                            }
+                
+                .media-section h2{
+                    width: 100%;
+                    text-align: center;
+                    color: rgb(255, 153, 102);
+                    border-bottom: 1px solid rgb(255, 153, 102);
+                }
+    
 }
 
 @media screen and (min-width: 1500px){
 
     #small-screen-show{
+        display: none;
+    }
+
+    #medium-screen-show{
         display: none;
     }
 
