--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -49,9 +49,9 @@
         margin-top: 5px;
         margin-bottom: 15px;
         display: flex;
-        width: 90%;
+        flex-flow: column;
+        width: 100%;
         justify-content: space-evenly;
-        flex-wrap: wrap;
         background-color: rgb(255, 255, 255);
         border: 5px solid rgb(255, 153, 102);
         border-radius: 5px;
@@ -156,7 +156,6 @@
         flex-wrap: wrap;
         justify-content: center;
         align-content: center;
-        max-height: 500px;
     }
     
     
@@ -167,7 +166,7 @@
         }
     
         .donations-bank-details{
-            width: 80%;
+            width: 95%;
             align-self: center;
             border-radius: 10px;
             padding: 5px;
